# RingCore

./: README.md  index.html
Config/: DefaultRule.json  settings.json  threats.json
Source/Guardian/: CMakeLists.txt
Source/Guardian/resources/: app.rc  resources.qrc
Source/Guardian/resources/styles/: main.qss
Source/Guardian/src/: MainWindow.cpp  MainWindow.h  main.cpp
Source/Guardian/src/core/: HeuristicEngine.cpp  HeuristicEngine.h  JunkCleaner.cpp  JunkCleaner.h  QuarantineManager.cpp  QuarantineManager.h  RealHashes.inc  ServiceClient.cpp  ServiceClient.h  Settings.cpp  Settings.h  ThreatDB.cpp  ThreatDB.h  ThreatDB.inc  ThreatDB_new.inc  VirusPack.inc  VirusPack0102.inc
Source/Guardian/src/engine/: ShieldEngine.cpp  ShieldEngine.h  ShieldEngine_sigs.inc
Source/Guardian/src/panels/: FirewallPanel.cpp  FirewallPanel.h  HomePanel.cpp  HomePanel.h  JunkCleanPanel.cpp  JunkCleanPanel.h  ProcessPanel.cpp  ProcessPanel.h  ScanPanel.cpp  ScanPanel.h  SettingPanel.cpp  SettingPanel.h
Source/Guardian/src/widgets/: ScanWidget.cpp  ScanWidget.h  StatusCard.cpp  StatusCard.h
Source/Service/: CMakeLists.txt  ServiceCore.cpp  ServiceCore.h  ServiceMain.cpp
Source/ShellExt/: CMakeLists.txt  ShellExt.cpp  ShellExt.def  ShellExt.h
website/: index.html
